# Project-ADA

./: pyproject.toml
ada_platform/: detect.py  launcher.py
agent/: executor.py  router.py
agent/tools/: __init__.py  app_tool.py  base.py  browser_tool.py  system_tool.py
app/: __init__.py  deps.py  main.py  services.py
config/: default.yaml
core/: config.py  exceptions.py  logger.py
orchestrator/: audio_input.py  audio_output.py  barge_in.py  pipeline.py  sentence_splitter.py  session.py  vram_monitor.py
scripts/: install_linux.sh  install_windows.cmd  install_windows.ps1
services/llm/: client.py  events.py  prompt_builder.py
services/stt/: audio_utils.py  client.py  server.py  transcriber.py
services/tts/: audio_utils.py  client.py  server.py  synthesizer.py
tests/unit/: test_agent_executor.py  test_agent_router.py  test_app_deps.py  test_app_main.py  test_app_services.py  test_app_tool.py  test_audio_input.py  test_audio_output.py  test_audio_utils.py  test_barge_in.py  test_base_tool.py  test_browser_tool.py  test_config.py  test_exceptions.py  test_launcher.py  test_llm_client.py  test_pipeline.py  test_platform_detect.py  test_prompt_builder.py  test_sentence_splitter.py  test_session.py  test_stt_client.py  test_system_tool.py  test_tts_audio_utils.py  test_tts_client.py  test_vram_monitor.py
