[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-ada"
version = "0.1.0"
description = "Local voice-driven AI assistant pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "faster-whisper",
    "httpx",
    "kokoro-onnx",
    "onnxruntime-gpu",
    "playwright",
    "psutil",
    "pyyaml",
    "pytest",
    "pytest-asyncio",
    "scipy",
    "sounddevice",
    "structlog",
    "uvicorn",
    "webrtcvad-wheels",
]

[project.scripts]
ada = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "ada_platform",
    "agent",
    "app",
    "core",
    "orchestrator",
    "services",
    "ui",
]
